2014-05-22  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/osp.c (osp_get_scan): New function.
	(osp_get_scanner_version): Fix memory leak. Code style update.

	* base/osp.h: Add new function's prototype.

2014-05-21  Henri Doreau <henri.doreau@gmail.com>

	* misc/kb.h (KB_PATH_DEFAULT): Define default KB location there.

	* nasl/nasl.c (KB_PATH_DEFAULT): Remove definition.

2014-05-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Make libssh mandatory. This allows to drop
	ssh code from NVTs once OpenVAS-7 is retired.

2014-05-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/openvas-nasl.1: Remove reference to long dead OpenVAS-Client.
	Fix reference to man page of OpenVAS Scanner.

2014-05-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/osp.c (osp_get_scanner_version): Adjust for null version
	argument value.
	(osp_start_scan, option_concat_as_xml): New function.

	* base/openvas_file.c (openvas_file_as_base64): New function.

	* base/openvas_file.h, base/osp.h: Add new functions prototypes.

2014-05-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Fix build with LibSSH >= 0.6.0. Reported by Daniel Malament. Suggested
	by Simon Desee.

	* nasl/nasl_ssh.h: Include libssh/legacy.h after libssh/libssh.h

	* nasl/nasl_ssh.c (nasl_ssh_get_banner): Constify banner variable. Remove
	ssh_string_free_char() call.

2014-05-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_init): Remove unused function.

	* nasl/nasl_socket.c (nasl_open_sock_tcp_bufsz, nasl_recv)
	(nasl_join_multicast_group, nasl_get_sock_info): Reduce variables scopes.
	(nasl_socket_get_error): Remove macro checks for defined variables.

	* omp/omp.c (omp_authenticate_info): Remove unused function.

	* misc/openvas_auth.h, omp/omp.h: Delete removed functions prototypes.

2014-05-06  Hani Benhabiles <hani.benhabiles@greenbone.net>
