@@ -1,3 +1,9 @@
+2014-05-27  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* nasl/nasl.c (parse_script_infos): New function.
+	(main): Make first parse of the executed nvt's description in order to
+	get information such as the OID.
+
 2014-05-22  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* base/osp.c (osp_get_scan): New function.
